[gd_scene load_steps=22 format=3 uid="uid://ci7u5r1qc0aob"]

[ext_resource type="Script" path="res://addons/ez_tiles/ez_tiles_dock.gd" id="1_xlstp"]
[ext_resource type="Script" path="res://addons/ez_tiles/load_files_button.gd" id="2_8dh4w"]
[ext_resource type="PackedScene" uid="uid://1u5mrsioaaon" path="res://addons/ez_tiles/images_container.tscn" id="3_vxumx"]
[ext_resource type="Texture2D" uid="uid://cxl4w251e8xgf" path="res://addons/ez_tiles/Save.svg" id="4_2smhm"]
[ext_resource type="Texture2D" uid="uid://njliaygubc5c" path="res://addons/ez_tiles/ZoomLess.svg" id="4_k6fm5"]
[ext_resource type="Texture2D" uid="uid://bvwx6xu0hp7mv" path="res://addons/ez_tiles/ZoomMore.svg" id="5_0phj1"]
[ext_resource type="Script" path="res://addons/ez_tiles/preview_panel_container.gd" id="6_3jtbs"]
[ext_resource type="Texture2D" uid="uid://d4a0dorx8awbg" path="res://addons/ez_tiles/guide.png" id="9_umpsr"]
[ext_resource type="PackedScene" uid="uid://cxnhqxx237lix" path="res://addons/ez_tiles/collision_polygon_templates/inverse_rounded_corners.tscn" id="9_wk7qe"]
[ext_resource type="PackedScene" uid="uid://bdtlwd7f6ojk0" path="res://addons/ez_tiles/collision_polygon_templates/rectangles.tscn" id="10_fyd7t"]
[ext_resource type="PackedScene" uid="uid://cm4063l3dfehn" path="res://addons/ez_tiles/collision_polygon_templates/rounded_corners.tscn" id="11_cnbjd"]
[ext_resource type="PackedScene" uid="uid://lfnyjmnayoqe" path="res://addons/ez_tiles/collision_polygon_templates/slopes.tscn" id="12_x4rcv"]
[ext_resource type="PackedScene" uid="uid://ckfu3f4u350bg" path="res://addons/ez_tiles/collision_polygon_templates/slopes_bottom.tscn" id="13_3furq"]
[ext_resource type="PackedScene" uid="uid://3gmoem8hi2hi" path="res://addons/ez_tiles/collision_polygon_templates/slopes_top.tscn" id="14_djl3r"]
[ext_resource type="PackedScene" uid="uid://ywxhlehtt18d" path="res://addons/ez_tiles/collision_polygon_templates/cactus.tscn" id="15_ll5rq"]
[ext_resource type="PackedScene" uid="uid://bp35luh5na8o7" path="res://addons/ez_tiles/collision_polygon_templates/tree.tscn" id="16_02naq"]

[sub_resource type="LabelSettings" id="LabelSettings_2svd6"]
font_color = Color(0.619608, 0.619608, 0.619608, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wkbrg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3l5ec"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ikc07"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fl86h"]
bg_color = Color(0.12549, 0.145098, 0.172549, 1)

[node name="EZTilesDock" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xlstp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="LoadFilesButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Import Images"
script = ExtResource("2_8dh4w")

[node name="GenerateTileSetButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
disabled = true
text = "Save TileSet"

[node name="GenerateTileMapLayerButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
disabled = true
text = "Create TileMapLayer"

[node name="ImagesContainer" parent="VBoxContainer" instance=ExtResource("3_vxumx")]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="TileSizeLabel" type="Label" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
tooltip_text = "The tile size is determined automatically from the first image you import. As you can see in  the template below, EZ Tiles expects a 6 by 4 grid; the tiles do not have to be square."
mouse_filter = 0
text = "Tile Size* "
label_settings = SubResource("LabelSettings_2svd6")

[node name="XSizeInputContainer" type="PanelContainer" parent="VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(84, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="YSizeInputContainer" type="PanelContainer" parent="VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(84, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="HintColorLabel" type="Label" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
mouse_filter = 0
text = "Hint colors: "
label_settings = SubResource("LabelSettings_2svd6")

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
tooltip_text = "Overlay Color"
color = Color(0, 0, 0, 0.701961)

[node name="CollisionLayerColorPickerButton" type="ColorPickerButton" parent="VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
tooltip_text = "Collision Polygon color"
color = Color(1, 0, 0, 0.392157)

[node name="GenerateTemplateButton" type="Button" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
disabled = true
text = "Save template"
icon = ExtResource("4_2smhm")

[node name="ZoomPreviewLabel" type="Label" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Zoom Preview: "
label_settings = SubResource("LabelSettings_2svd6")
horizontal_alignment = 2

[node name="ZoomOutButton" type="Button" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_wkbrg")
icon = ExtResource("4_k6fm5")

[node name="ResetZoomButton" type="Button" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_3l5ec")
text = "100%"

[node name="ZoomInButton" type="Button" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_ikc07")
icon = ExtResource("5_0phj1")

[node name="PreviewScrollContainer" type="ScrollContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_fl86h")

[node name="PreviewPanelContainer" type="CenterContainer" parent="VBoxContainer2/PreviewScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("6_3jtbs")

[node name="PreviewTextureRect" type="TextureRect" parent="VBoxContainer2/PreviewScrollContainer/PreviewPanelContainer"]
texture_filter = 1
layout_mode = 2
expand_mode = 3

[node name="Rounded Corners (Inverse)" parent="VBoxContainer2/PreviewScrollContainer/PreviewPanelContainer/PreviewTextureRect" instance=ExtResource("9_wk7qe")]
visible = false
modulate = Color(0.970763, 0, 0.452533, 0.42)

[node name="Rectangles" parent="VBoxContainer2/PreviewScrollContainer/PreviewPanelContainer/PreviewTextureRect" instance=ExtResource("10_fyd7t")]
visible = false
modulate = Color(0.970763, 0, 0.452533, 0.42)

[node name="Rounded Corners" parent="VBoxContainer2/PreviewScrollContainer/PreviewPanelContainer/PreviewTextureRect" instance=ExtResource("11_cnbjd")]
visible = false
modulate = Color(0.970763, 0, 0.452533, 0.42)

[node name="Sloped (All Corners)" parent="VBoxContainer2/PreviewScrollContainer/PreviewPanelContainer/PreviewTextureRect" instance=ExtResource("12_x4rcv")]
visible = false
modulate = Color(0.970763, 0, 0.452533, 0.42)

[node name="Sloped (Bottom Corners)" parent="VBoxContainer2/PreviewScrollContainer/PreviewPanelContainer/PreviewTextureRect" instance=ExtResource("13_3furq")]
visible = false
modulate = Color(0.970763, 0, 0.452533, 0.42)

[node name="Sloped (Top Corners)" parent="VBoxContainer2/PreviewScrollContainer/PreviewPanelContainer/PreviewTextureRect" instance=ExtResource("14_djl3r")]
visible = false
modulate = Color(0.970763, 0, 0.452533, 0.42)

[node name="Cactus" parent="VBoxContainer2/PreviewScrollContainer/PreviewPanelContainer/PreviewTextureRect" instance=ExtResource("15_ll5rq")]
visible = false

[node name="Tree" parent="VBoxContainer2/PreviewScrollContainer/PreviewPanelContainer/PreviewTextureRect" instance=ExtResource("16_02naq")]
visible = false

[node name="OverlayTextureRect" type="TextureRect" parent="VBoxContainer2/PreviewScrollContainer/PreviewPanelContainer"]
texture_filter = 1
layout_mode = 2
expand_mode = 3

[node name="GuideTextureRect" type="TextureRect" parent="VBoxContainer2/PreviewScrollContainer/PreviewPanelContainer"]
modulate = Color(1, 1, 1, 0.701961)
texture_filter = 1
layout_mode = 2
texture = ExtResource("9_umpsr")
expand_mode = 3

[connection signal="load_files" from="VBoxContainer/HBoxContainer/LoadFilesButton" to="." method="_on_file_menu_load_files"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LoadFilesButton" to="VBoxContainer/HBoxContainer/LoadFilesButton" method="_on_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/GenerateTileSetButton" to="." method="_on_generate_tile_set_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/GenerateTileMapLayerButton" to="." method="_on_generate_tile_map_layer_button_pressed"]
[connection signal="drop_files" from="VBoxContainer/ImagesContainer" to="." method="_on_images_container_drop_files"]
[connection signal="terrain_list_collision_type_selected" from="VBoxContainer/ImagesContainer" to="." method="_on_images_container_terrain_list_collision_type_selected"]
[connection signal="terrain_list_entry_removed" from="VBoxContainer/ImagesContainer" to="." method="_on_images_container_terrain_list_entry_removed"]
[connection signal="terrain_list_entry_selected" from="VBoxContainer/ImagesContainer" to="." method="_on_images_container_terrain_list_entry_selected"]
[connection signal="color_changed" from="VBoxContainer2/HBoxContainer/ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
[connection signal="color_changed" from="VBoxContainer2/HBoxContainer/CollisionLayerColorPickerButton" to="." method="_on_collision_layer_color_picker_button_color_changed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/GenerateTemplateButton" to="." method="_on_generate_template_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/ZoomOutButton" to="." method="_on_zoom_out_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/ResetZoomButton" to="." method="_on_reset_zoom_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/ZoomInButton" to="." method="_on_zoom_in_button_pressed"]
[connection signal="gui_input" from="VBoxContainer2/PreviewScrollContainer" to="." method="_on_preview_panel_container_gui_input"]
[connection signal="drop_files" from="VBoxContainer2/PreviewScrollContainer/PreviewPanelContainer" to="." method="_on_preview_panel_container_drop_files"]
